--- a/story.html
+++ b/story.html
@@ -198,7 +198,7 @@
 			<p>The game could be as simple or as complex as the developers wish and have time to develop. More complex is not always better. The following are ideas that could be incorporated into the game at the developer’s choice.</p>
 			<ul>
 				<li>Start location options: the Earth, the Moon, Mars, inside the Asteroid Belt, etc.</li>
-				<li>Objective options: 1) to travel furthest from the starting point, 2) to travel around the Sun within the Asteroid Belt, 3) to get back to Earth from another planet/place, 4) to reach a settlement on Mars or Titan, 5) to gather the most valuable collection of resources, 6) to save the Earth from an impending asteroid impact, 7) to supply an industry that terraforms Mars, 8) to explore the solar system and beyond.<li>
+				<li>Objective options: 1) to travel furthest from the starting point, 2) to travel around the Sun within the Asteroid Belt, 3) to get back to Earth from another planet/place, 4) to reach a settlement on Mars or Titan, 5) to gather the most valuable collection of resources, 6) to save the Earth from an impending asteroid impact, 7) to supply an industry that terraforms Mars, 8) to explore the solar system and beyond.</li>
 				<li>Asteroid field options: constant each time the game is played; varied each time the game is played; changes as game passes and bodies move around the sun, etc.</li>
 				<li>Mission type options: human; robotic; both.</li>
 				<li>Starting capital and material options: player is given a standard or randomly selected set of equipment (like mining equipment) and other resources are made available; the player buys a selection of these with a limited amount of startup cash</li>
@@ -212,7 +212,7 @@
 			<ul>
 				<li>Survival option: use the resources to survive and make it to the destination.</li>
 				<li>Planetary Defense option: if an asteroid is potentially hazardous, receive extra points or payment from the people of Earth for pushing the asteroid into a safe orbit. Possibilities include: 1) if a big asteroid hits Earth, the game is over, 2) if a small asteroid hits Earth, the player is penalized, 3) the player must decide how to push each asteroid (kinetic impact, gravity tractor, nuclear explosion, etc), 4) if choose a nuclear explosion on the asteroid, it is then unavailable for mining due to radiation, 5) if choose to mine the asteroid, there is a risk of it hitting Earth	
-				<li>Space Tourism option: build outposts and hotels on the asteroids or planets; set up a transportation system with refueling stations to take people there </p>		
+				<li>Space Tourism option: build outposts and hotels on the asteroids or planets; set up a transportation system with refueling stations to take people there</li>		
 				<li>Exploration option: visit destinations of interest and make discoveries along the way.</li>
 			</ul>
 			
