--- a/game.html
+++ b/game.html
@@ -26,11 +26,22 @@
 
 		<div role="navigation" class="navbar navbar-inverse navbar-fixed-top">
 				<div class="navbar-header">
-					<a href="#" class="navbar-brand"><i class="glyphicon glyphicon-globe"></i> APE Mining Corporation</a>
+						<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-1">
+	        	<span class="sr-only">Toggle navigation</span>
+	        	<span class="icon-bar"></span>
+	        	<span class="icon-bar"></span>
+	       	 	<span class="icon-bar"></span>
+     			</button>
+					<a href="index.html" class="navbar-brand"><i class="glyphicon glyphicon-globe"></i> APE Mining Corporation</a>
+					<div class="btnContainer navbar-brand">
+						<a href="game.html" class="btn btn-warning" id="restartGameBtn" value="Restart Game" ><i class="glyphicon glyphicon-refresh"></i> Retry</a>
+						<button class="btn btn-info btn-sm" id="pause" value="Pause Game" ><i class="glyphicon glyphicon-pause"></i> Pause</button>
+						&nbsp;
+					</div>
 				</div>
-				<div class="navbar-collapse ">
+						
+				<div class="navbar-collapse collapse "   id="navbar-collapse-1">
 					<ul class="nav navbar-nav">
-						<li><a href="index.html"><i class="glyphicon glyphicon-home"></i> Home</a></li>
 						<li class="active"><a href="game.html"><i class="glyphicon glyphicon-play"></i> Game</a></li>
 						<li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#handbook"><i class="glyphicon glyphicon-list-alt"></i> Employee Handbook
 							<b class="caret"></b>
@@ -41,27 +52,26 @@
 							</ul>
 						</li>
 					</ul>
-					<div class="btnContainer">
-						<a href="game.html" class="btn btn-warning" id="restartGameBtn" value="Restart Game" ><i class="glyphicon glyphicon-refresh"></i> Retry</a>
-						<button class="btn btn-info btn-sm" id="pause" value="Pause Game" ><i class="glyphicon glyphicon-pause"></i> Pause</button>
-					</div>
-					<div class="fuelbar pull-right">
-					FUEL
-						<div class="progress progress-striped" id="fuel">
-						  <div class="progress-bar progress-bar-info"  role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
-						    <span class="sr-only">100</span>
-						  </div>
-						</div>
-					</div>
-
-					<div id="scores" class=" pull-right">
-						<span class="preciousMetals" data-toggle="tooltip" data-placement="bottom" title="Precious Metals are worth money"><img src="images/pickupP.png"> <span>0</span> </span>
-						<span class="constructionMaterials"  data-toggle="tooltip" data-placement="bottom" title="Construction Materials can be used for building and colonisation"><img src="images/pickupC.png"> <span>0</span></span>
-						<span class="waste" data-toggle="tooltip" data-placement="bottom" title="Waste is worthless, but it's bad to leave it flying around in space"><img src="images/pickupW.png"> <span>0</span></span>
-						<span class="money"><i class="glyphicon glyphicon-usd"></i> <span class="badge">0</span> CASH </span>
-					</div>
-
 				</div>
+				<div class="nav-game">
+
+						<div class="fuelbar pull-right">
+						FUEL
+							<div class="progress progress-striped" id="fuel">
+							  <div class="progress-bar progress-bar-info"  role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
+							    <span class="sr-only">100</span>
+							  </div>
+							</div>
+						</div>
+	
+						<div id="scores" class=" pull-right">
+							<span class="preciousMetals" data-toggle="tooltip" data-placement="bottom" title="Precious Metals are worth money"><img src="images/pickupP.png"> <span>0</span> </span>
+							<span class="constructionMaterials"  data-toggle="tooltip" data-placement="bottom" title="Construction Materials can be used for building and colonisation"><img src="images/pickupC.png"> <span>0</span></span>
+							<span class="waste" data-toggle="tooltip" data-placement="bottom" title="Waste is worthless, but it's bad to leave it flying around in space"><img src="images/pickupW.png"> <span>0</span></span>
+							<span class="money"><i class="glyphicon glyphicon-usd"></i> <span class="badge">0</span> CASH </span>
+						</div>
+
+					</div>
 		</div>
 
 		<canvas id="viewport"></canvas>
