--- a/game-low.html
+++ b/game-low.html
@@ -255,7 +255,7 @@
 		</script>
 
 		<script src="js/require.js"></script>
-		<script src="js/main.js"></script>
+		<script src="js/main-low.js"></script>
 		<script src="js/gamestate.js"></script>
 		<script type="text/javascript">
 		var gamestate = new GameState();
